tests/NormalTests/paczka1/small_fuzzy/26525039.err
Error in line 5: UAzpRJX S87 7,93
Error in line 10: c2ct S573 32,70
Error in line 9: c2ct S87 71,2
